# calmerge

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
calmerge/: __init__.py  __main__.py  calendars.py  config.py  static.py  templates.py  utils.py  views.py  write.py
calmerge/static/: calendar.css  calendar.js  listing.css
calmerge/templates/: calendar.html  listing.html
tests/: calendars.toml  conftest.py  test_calendar_html_view.py  test_calendar_view.py  test_config.py  test_health_view.py  test_listing_view.py  test_write.py
