[tool.poetry]
name = "calmerge"
version = "0.1.0"
description = ""
authors = ["Jake Howard"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
pydantic = "^2.6.4"
tempora = "^5.5.1"
icalendar = "^5.0.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
pytest = "^8.1.1"
pytest-aiohttp = "^1.0.5"
pytest-asyncio = "^0.23.5.post1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
calmerge = "calmerge.__main__:main"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "B", "A", "C4", "T20"]
ignore = ["E501"]

[tool.ruff.lint.extend-per-file-ignores]
"__main__.py" = ["T201"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
