[tool.poetry]
name = "calmerge"
version = "0.1.0"
description = ""
authors = ["Jake Howard"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
pydantic = "^2.6.4"
icalendar = "^5.0.11"
aiocache = "^0.12.2"
aiohttp-jinja2 = "^1.6"

aiohttp-remotes = "^1.2.0"
[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
pytest = "^8.1.1"
pytest-aiohttp = "^1.0.5"
pytest-asyncio = "^0.23.5.post1"
pytest-cov = "^4.1.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
calmerge = "calmerge.__main__:main"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "B", "A", "C4", "T20"]
ignore = ["E501"]

[tool.ruff.lint.extend-per-file-ignores]
"__main__.py" = ["T201"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
strict_optional = true
implicit_optional = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
ignore_missing_imports = true
